Fix issue with missing scrollbar

--- a/source/layout/root/style.scss
+++ b/source/layout/root/style.scss
@@ -9,4 +9,8 @@
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
+    
+    .panel {
+        overflow-y: auto;
+    }
 }
